[package]
name = "mqtt-client"
version = "0.1.0"
authors = ["Pedro Rodríguez <prodriguezvieites@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "mqtt-client"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-sys = { version = "0.35", default-features = false }
esp-idf-hal = { version = "0.44", default-features = false }
esp32 = "0.34.0"
embedded-svc = { version = "0.26.2", default-features = false }
dht11 = {version="0.3.1"}
mpu6050 = "0.1.6"
smart-leds = "*"
ws2812-esp32-rmt-driver = { version = "*", features = ["smart-leds-trait"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
toml-cfg = "0.2.0"


[build-dependencies]
embuild = "*"
anyhow = "1"
cc = "=1.1.30" # Necessary until a new version of `esp-idf-sys` is released
toml-cfg = "0.2.0"